CMAKE_MINIMUM_REQUIRED (VERSION 3.1)

# Project Properties
PROJECT (hat-trie)
SET (APPLICATION_NAME "hat-trie")
SET (APPLICATION_AUTHOR "Chi-En Wu")
SET (APPLICATION_CODENAME "${APPLICATION_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2015")
SET (APPLICATION_VERSION_MAJOR 0)
SET (APPLICATION_VERSION_MINOR 1)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")

# Debugging Options
SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

# Project Output Paths
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})

# Project Search Paths
INCLUDE_DIRECTORIES ("${MAINFOLDER}/include")

# Add Build Targets
ADD_LIBRARY (lib INTERFACE)

ENABLE_TESTING ()
ADD_SUBDIRECTORY (test)
